tests/compile-fail/integration_suite__integration__type_check__const__short_circuit__or.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:27:12
   │
27 │       I0 = 0.0 || 1;  
   │            ^^^ -- expects an integer
   │            │    
   │            a float


